2012-03-12  Charlie Zender  <zender@uci.edu>

	* NCO 4.1.0 release procedure:
 	Changes since nco-4_0_9: sorts & maps, MD5, chmod, NaNs, LBF
	cd ~/nco;cvs tag -d nco-4_1_0;cvs tag -d nco-4_1_0-1
	cd ~/nco;cvs commit -m "Preparing nco-4.1.0 release"
	cvs tag -c nco-4_1_0;cvs tag -c nco-4_1_0-1

	* Implement nco_cpy_rec_var_val() to finish ncks LBF-workaround

2012-03-11  Charlie Zender  <zender@uci.edu>

	* For unknown reasons, regression tests started passing again (!)

	* Implement nco_var_lst_fix_rec_dvd() as part of LBF workaround

2012-03-09  Charlie Zender  <zender@uci.edu>

	* Add stubs to ncks for faster copies on Large Blocksize Filesystems (LBFs)

2012-03-08  Charlie Zender  <zender@uci.edu>

	* Allow ncatted to change missing value's that are NaNs
	Arithmetic operators will still treat NaNs incorrectly, but this
	allows users to get rid of all NaNs first

	* Add some NaNs to in.nc for testing

2012-03-07  Charlie Zender  <zender@uci.edu>

	* Try hooks to determine filesystem blocksize in prep for Rew workaround

2012-03-06  Charlie Zender  <zender@uci.edu>

	* Merge aux and lmt_all changes from ncpdq.c, ncra.c to mpncpdq.c mpncra.c

2012-03-01  Charlie Zender  <zender@uci.edu>

	* Clean-up ncap2.cc

	* Clean-up CPP token scope

	* Sub-routine-ize nco_fl_overwrite_prm() to cleanup ncatted.c, ncrename.c

	* Port new file copy/chmod code from ncrename to ncatted

	* Replace multiple instances of hard-coded limit with CPP token NCO_MAX_NBR_USR_INPUT_RETRY

	* Allocate tally array for degenerate averages in nco_var_avg()
	This fixes ncap2 problem. Not sure why ncwa never failed.

	* Add degenerate variables to in.nc for testing nco_var_avg()

	* nco_var_avg() crashes on degenerate arrays sent by ncap2 not ncwa
	ncap2 -O -v -s 'dgn_max=dgn.max()' ~/nco/data/in.nc ~/foo.nc # Fails
	ncwa -O -v dgn_var ~/nco/data/in.nc ~/foo.nc # Succeeds

2012-02-29  Charlie Zender  <zender@uci.edu>

	* Use chmod() C-library call instead of chmod shell-command
