@@ -1,4 +1,4 @@
-/* $Header: /data/zender/nco_20150216/nco/src/nco/ncks.c,v 1.292 2012-03-13 06:43:05 zender Exp $ */
+/* $Header: /data/zender/nco_20150216/nco/src/nco/ncks.c,v 1.293 2012-03-15 02:00:11 zender Exp $ */
 
 /* ncks -- netCDF Kitchen Sink */
 
@@ -102,7 +102,7 @@ main(int argc,char **argv)
   nco_bool PRN_VAR_METADATA_TGL=False; /* [flg] Toggle print variable metadata Option m */
   nco_bool PRN_VRB=False; /* [flg] Print data and metadata by default */
   nco_bool RM_RMT_FL_PST_PRC=True; /* Option R */
-  nco_bool USE_LBF_WORKAROUND=False; /* [flg] Faster copy on Large Blocksize Filesystems */
+  nco_bool USE_MM3_WORKAROUND=False; /* [flg] Faster copy on Multi-record Multi-variable netCDF3 files */
   nco_bool flg_cln=False; /* [flg] Clean memory prior to exit */
 
   char **fl_lst_abb=NULL; /* Option a */
@@ -127,8 +127,8 @@ main(int argc,char **argv)
   char *rec_dmn_nm=NULL; /* [sng] Record dimension name */
   char *sng_cnv_rcd=char_CEWI; /* [sng] strtol()/strtoul() return code */
 
-  const char * const CVS_Id="$Id: ncks.c,v 1.292 2012-03-13 06:43:05 zender Exp $"; 
-  const char * const CVS_Revision="$Revision: 1.292 $";
+  const char * const CVS_Id="$Id: ncks.c,v 1.293 2012-03-15 02:00:11 zender Exp $"; 
+  const char * const CVS_Revision="$Revision: 1.293 $";
   const char * const opt_sht_lst="346aABb:CcD:d:Fg:HhL:l:MmOo:Pp:qQrRs:uv:X:x-:";
 
   cnk_sct **cnk=NULL_CEWI;
@@ -677,10 +677,10 @@ main(int argc,char **argv)
     rcd+=nco_ddra((char *)NULL,(char *)NULL,&ddra_info);
     ddra_info.tmr_flg=nco_tmr_rgl;
     
-    /* 20120309 Special case to improve copy speed on large blocksize filesystems (LBFs) */
-    USE_LBF_WORKAROUND=nco_use_lbf_workaround(in_id,fl_out_fmt);
-    if(lmt_nbr > 0) USE_LBF_WORKAROUND=False; /* fxm: until workaround implemented in nco_cpy_var_val_mlt_lmt() */
-    if(!USE_LBF_WORKAROUND){  
+    /* 20120309 Special case to improve copy speed on large blocksize filesystems (MM3s) */
+    USE_MM3_WORKAROUND=nco_use_lbf_workaround(in_id,fl_out_fmt);
+    if(lmt_nbr > 0) USE_MM3_WORKAROUND=False; /* fxm: until workaround implemented in nco_cpy_var_val_mlt_lmt() */
+    if(!USE_MM3_WORKAROUND){  
       /* Copy all data variable-by-variable */
       for(idx=0;idx<xtr_nbr;idx++){
 	if(dbg_lvl >= nco_dbg_var && !NCO_BNR_WRT) (void)fprintf(stderr,"%s, ",xtr_lst[idx].nm);
@@ -693,12 +693,12 @@ main(int argc,char **argv)
 	if(lmt_nbr > 0) (void)nco_cpy_var_val_mlt_lmt(in_id,out_id,fp_bnr,MD5_DIGEST,NCO_BNR_WRT,xtr_lst[idx].nm,lmt_all_lst,nbr_dmn_fl); else (void)nco_cpy_var_val(in_id,out_id,fp_bnr,MD5_DIGEST,NCO_BNR_WRT,xtr_lst[idx].nm);
       } /* end loop over idx */
     }else{
-      /* LBF workaround algorithm */
+      /* MM3 workaround algorithm */
       nm_id_sct **fix_lst=NULL; /* [sct] Fixed-length variables to be extracted */
       nm_id_sct **rec_lst=NULL; /* [sct] Record variables to be extracted */
       int fix_nbr; /* [nbr] Number of fixed-length variables */
       int rec_nbr; /* [nbr] Number of record variables */
-      if(dbg_lvl >= nco_dbg_std) (void)fprintf(stderr,"%s: INFO Using LBF-workaround to hasten copying of record variables\n",prg_nm_get());
+      if(dbg_lvl >= nco_dbg_std) (void)fprintf(stderr,"%s: INFO Using MM3-workaround to hasten copying of record variables\n",prg_nm_get());
       /* Split list into fixed-length and record variables */
       (void)nco_var_lst_fix_rec_dvd(in_id,xtr_lst,xtr_nbr,&fix_lst,&fix_nbr,&rec_lst,&rec_nbr);
       /* Copy fixed-length data variable-by-variable */
