@@ -1,6 +1,6 @@
 nco (4.1.0-1) unstable; urgency=low
 
-  * new upstream version (sorts & maps, MD5, chmod, NaNs, LBF)
+  * new upstream version (sorts & maps, MD5, chmod, NaNs, MM3)
 
  -- Charlie Zender <zender@uci.edu>  Tue, 14 Feb 2012 21:45:15 -0800
 
